fix: refactor create flight service